--- a/stylus/variables.styl
+++ b/stylus/variables.styl
@@ -20,6 +20,7 @@ color-hightlight = #fffcd7
 //
 //## Settings for some of the most global styles.
 body-bg = #fff
+darker-bg = #434a54
 text-color = gray-dark
 link-color = color-primary
 link-hover-color = lighten(link-color, 15%)
@@ -210,54 +211,23 @@ dropdown-header-color = gray-light
 dropdown-caret-color = #000
 
 
-//-- Z-index master list
-//
-// Warning = Avoid customizing these values. They're used for a bird's eye view
-// of components dependent on the z-axis and are designed to all work together.
-//
-// Note = These variables are not generated into the Customizer.
+// Z-index master list
 
 zindex-navbar = 1000
-zindex-dropdown = 1000
-zindex-popover = 1060
-zindex-tooltip = 1070
-zindex-navbar-fixed = 1030
-zindex-modal = 1040
+zindex-dropdown = 1001
+zindex-navbar-fixed = 1002
+zindex-modal = 1003
+zindex-popover = 1004
+zindex-tooltip = 1005
 
 
 // Grid system
-//
-//## Define your custom responsive grid.
-
-//** Number of columns in the grid.
 grid-columns = 12
-//** Padding between columns. Gets divided in half for the left and right.
 grid-gutter-width = 30px
-// Navbar collapse
-//** Point at which the navbar becomes uncollapsed.
-grid-float-breakpoint = screen-sm-min
-//** Point at which the navbar begins collapsing.
-grid-float-breakpoint-max = (grid-float-breakpoint - 1)
 
 
 // Container sizes
-//
-//## Define the maximum width of `.container` for different screen sizes.
-
-// Small screen / tablet
-container-tablet = (720px + grid-gutter-width)
-//** For `screen-sm-min` and up.
-container-sm = container-tablet
-
-// Medium screen / desktop
-container-desktop = (940px + grid-gutter-width)
-//** For `screen-md-min` and up.
-container-md = container-desktop
-
-// Large screen / wide desktop
-container-large-desktop = (1140px + grid-gutter-width)
-//** For `screen-lg-min` and up.
-container-lg = container-large-desktop
+container = 990px
 
 
 // Navbar
