{add} icon.styl base on Glyphicons

--- a/stylus/anole.styl
+++ b/stylus/anole.styl
@@ -1,16 +1,6 @@
-//default values
 @import 'nib'
-@import 'mixin/alert'
-@import 'mixin/buttons'
-body
-	clearfix()
+@import 'mixin/index'
+// @import 'icon'
 
-.button-test
-	button-variant(#fff,#ccc,#aaa)
-
-.button-huge
-	button-size(10px,10px,12px,24px,3px)
-
-.alert
-	alert-variant(red,red,red)
-
+.fortest
+	button-size(1px,1px,1px,1px,1px)
