--- a/stylus/anole.styl
+++ b/stylus/anole.styl
@@ -1,6 +1,15 @@
 @import 'nib'
+@import 'variables'
 @import 'mixin/index'
 // @import 'icon'
 
 .fortest
 	button-size(1px,1px,1px,1px,1px)
+
+.container
+	make-container()
+
+.row
+	make-row()
+
+make-grid-columns()
