--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,3 +2,20 @@
 
 <h1><%= title %></h1>
 <p>Welcome to <%= title %></p>
+
+<div class="container">
+	<div class="row">
+		<div class="span1">1</div>
+		<div class="span1">2</div>
+		<div class="span1">3</div>
+		<div class="span1">4</div>
+		<div class="span1">5</div>
+		<div class="span1">6</div>
+		<div class="span1">7</div>
+		<div class="span1">8</div>
+		<div class="span1">9</div>
+		<div class="span1">10</div>
+		<div class="span1">11</div>
+		<div class="span1">12</div>
+	</div>
+</div>
